welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:8: error: ';' expected but 'else' found.
    } else for (i<- 0 to 4) {
      ^